--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "postinstalltheme": "yarn gen:theme-typings"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.11",
+    "@chakra-ui/react": "^2.3.5",
+    "@chakra-ui/theme-tools": "^2.0.12",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.4.0",
     "@tanstack/react-query": "^4.10.0",
@@ -25,8 +30,10 @@
     "@trpc/next": "10.0.0-proxy-beta.17",
     "@trpc/react": "10.0.0-proxy-beta.17",
     "@trpc/server": "10.0.0-proxy-beta.17",
+    "framer-motion": "^7.5.3",
     "next": "12.3.1",
     "next-auth": "^4.12.3",
+    "next-seo": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
@@ -34,6 +41,7 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@chakra-ui/cli": "^2.1.8",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
