--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,18 @@
 {
   "parser": "@typescript-eslint/parser",
-  // "overrides": [
-  //   {
-  //     "files": ["*.ts", "*.tsx"],
-  //     "extends": [
-  //       "plugin:@typescript-eslint/recommended",
-  //       "plugin:@typescript-eslint/recommended-requiring-type-checking"
-  //     ],
+  "overrides": [
+    {
+      "files": ["*.ts", "*.tsx"],
+      "extends": [
+        "plugin:@typescript-eslint/recommended",
+        "plugin:@typescript-eslint/recommended-requiring-type-checking"
+      ],
 
-  //     "parserOptions": {
-  //       "project": ["./tsconfig.json"]
-  //     }
-  //   }
-  // ],
-  "parserOptions": {
-    "project": "./tsconfig.json"
-  },
+      "parserOptions": {
+        "project": ["./tsconfig.json"]
+      }
+    }
+  ],
   "plugins": ["@typescript-eslint"],
   "extends": ["next/core-web-vitals", "plugin:@typescript-eslint/recommended"]
 }
