--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "^8.5.0",
     "prisma": "^4.4.0",
     "typescript": "^4.8.4"
   },
