--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
+    "next-sitemap": "^3.1.25",
     "prisma": "^4.4.0",
     "typescript": "^4.8.4"
   },
