--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@trpc/next": "10.0.0-proxy-beta.17",
     "@trpc/react": "10.0.0-proxy-beta.17",
     "@trpc/server": "10.0.0-proxy-beta.17",
+    "argon2": "^0.30.1",
     "framer-motion": "^7.5.3",
     "next": "12.3.1",
     "next-auth": "^4.12.3",
