--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "12.3.1",
     "next-auth": "^4.12.3",
     "next-seo": "^5.6.0",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
@@ -43,6 +44,8 @@
   "devDependencies": {
     "@chakra-ui/cli": "^2.1.8",
     "@types/node": "18.0.0",
+    "@types/nodemailer": "^6.4.6",
+    "@types/nodemailer-smtp-transport": "^2.7.5",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
