--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@chakra-ui/theme-tools": "^2.0.12",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@hookform/resolvers": "^2.9.9",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.4.0",
     "@tanstack/react-query": "^4.10.0",
@@ -38,6 +39,7 @@
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.37.0",
     "superjson": "1.9.1",
     "trpc-playground": "^0.4.3",
     "zod": "^3.18.0"
