--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
     "next-sitemap": "^3.1.25",
+    "prettier-plugin-organize-imports": "^3.1.1",
     "prisma": "^4.4.0",
     "typescript": "^4.8.4"
   },
