--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.37.0",
+    "react-intersection-observer": "^9.4.0",
     "spotify-web-api-node": "^5.0.2",
     "superjson": "1.9.1",
     "trpc-playground": "^0.4.3",
